<resources>
    <string name="app_name">LondOn-Time Transit</string>
    <string name="debug_tag">LOT_COMP</string>
    <string name="title_activity_maps">Bus Map</string>
    <string name="tap_on_marker_instruction">Tap on a Marker!</string>
    <string name="user_location_permission_explanation">To accurately display your current location, the application requires permission to use your location.</string>
    <string name="user_location_permission_not_granted">Location permissions were not granted.</string>
    <!--<string name="title_activity_navigation_drawer">Lond-On-Time Map</string>-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_title">A Pantone 448C Production</string>
    <string name="nav_header_subtitle">2019 Fanshawe College INFO5103</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <string name="action_resetPosition">Reset camera position</string>
    <string name="action_centerCamLondon">Focus Camera on London</string>
    <string name="action_clearAllSaved">Clear all Saved Stops</string>

    <string name="menu_map">Bus Map</string>
    <string name="menu_routes">View Routes</string>
    <string name="menu_savedstops">Saved Stops</string>
    <string name="menu_directions">Directions</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="lblStartAddress">Start Address</string>
    <string name="lblEndAddress">Destination Address</string>
    <string name="durationLabel">Duration</string>
    <string name="distanceLabel">Distance</string>
    <string name="arrivalTimeLbl">Arrival Time</string>
    <string name="departureTimeLbl">Departure Time</string>
    <string name="rideStopsLbl">#Stops till Destination</string>

    <string name="savedstops_stopid">Stop ID</string>
    <string name="savedstops_removestop">Remove</string>

    <string name="placeholder">Placeholder</string>

    <!-- Stop Times Fragment -->
    <string name="favourite">Favourite</string>
    <string name="refreshnext">Refresh in...</string>
    <string name="refreshnow">Refresh Now</string>

    <string name="mapbox_cust_style">mapbox://styles/gensyll/ck2z4iba743mz1cp874euyhqf</string>
</resources>
