<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_box"
            android:icon="@drawable/baseline_map_black_18dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/baseline_directions_bus_black_18dp"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_directions"
            android:icon="@drawable/directions"
            android:title="@string/menu_directions" />
        <item
            android:id="@+id/nav_savedstops"
            android:icon="@drawable/mapbox_ic_check"
            android:title="@string/menu_savedstops" />
    </group>

</menu>
