<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map_box">

    <fragment
        android:id="@+id/nav_map_box"
        android:name="com.pantone448c.ltccompanion.ui.mapbox.MapBoxFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map_box" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.pantone448c.ltccompanion.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/nav_directions"
        android:name="com.pantone448c.ltccompanion.ui.directions.DirectionsFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes" />
    <action android:id="@+id/action_global_nav_routes" app:destination="@id/nav_routes" />

    <fragment
        android:id="@+id/nav_savedstops"
        android:name="com.pantone448c.ltccompanion.ui.savedstops.SavedStopsFragment"
        android:label="@string/menu_savedstops"
        tools:layout="@layout/fragment_savedstops" />
    <action android:id="@+id/action_global_nav_savedstops" app:destination="@id/nav_savedstops" />
</navigation>